重构项目架构和完善功能